Added updates to support new image formats.
* Added DerelictImage and SDL_Image libraries.
* Moved images to 'gfx' subdirectory.
* Moved exception checking logic to Surface.onLoad.

--- a/dsss.conf
+++ b/dsss.conf
@@ -1,5 +1,5 @@
 [*]
-buildflags=-llGL -llDerelictSDL -llDerelictUtil -llDerelictGL
+buildflags=-gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
 
 [game.d]
 target=game
