Split tic-tac-toe into its own module. Add animated Yoshi.

--- a/dsss.conf
+++ b/dsss.conf
@@ -4,5 +4,8 @@ buildflags=-gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
 [game.d]
 target=game
 
+[tictac.d]
+target=tictac
+
 #[dsdl.d]
 #target=dsdl_demo
