Introduced basic physics engine.
 * Updated Yoshi with more graphics.
 * Added FPS tracking logic for speed scaling.
 * Heavily modified entity interaction and motion.
Bugs:
 * Yoshi has a white background due to PNG transparency bug.
 * Collision detection is extremely slow, so it is disabled.

--- a/dsss.conf
+++ b/dsss.conf
@@ -1,5 +1,5 @@
 [*]
-buildflags=-gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
+buildflags=-debug -gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
 
 [game.d]
 target=game
