Optimized collision detection logic.
Using dmd -profile -debug, the run time of isLocationValidTile was
dropped from 8090 to 3550.  Instead of checking the entire image
boundary, the logic was made to test only the new area to be occupied,
try a greedy move, and back off if there's a collision.

Also, several functions which used struct parameters were changed to
use 'in', which shaved off another 84 time units.

--- a/dsss.conf
+++ b/dsss.conf
@@ -1,11 +1,17 @@
-[*]
-buildflags=-debug -gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
+defalttargets=game
 
 [game.d]
+buildflags=-release -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
 target=game
 
-[tictac.d]
-target=tictac
+[game.d+debug]
+buildflags=-debug -gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
+target=game_debug
 
-#[dsdl.d]
-#target=dsdl_demo
+[game.d+profile]
+buildflags=-profile -debug -gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
+target=game_profile
+
+[tictac.d]
+buildflags=-gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
+target=tictac
