Split main module from game module.
A build target 'unit_test' was added with a dummy main
that runs all unittest code.

--- a/dsss.conf
+++ b/dsss.conf
@@ -1,16 +1,20 @@
-defalttargets=game
+defaulttargets=game
 
-[game.d]
+[main.d]
 buildflags=-release -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
 target=game
 
-[game.d+debug]
+[main.d+debug]
 buildflags=-debug -gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
 target=game_debug
 
-[game.d+profile]
+[main.d+profile]
 buildflags=-profile -debug -gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
 target=game_profile
+
+[unit_test.d]
+buildflags=-unittest -gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
+target=unit_test
 
 [tictac.d]
 buildflags=-gc -llGL -llSDL_image -llDerelictSDL -llDerelictUtil -llDerelictGL
